Revert "CI: Ubuntu uses apt instead of yum."
This reverts commit d4e599bfb7074ba0433b2e118410e42eb9a9431c.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ test_src:
   image: registry.orr.noaa.gov/gnome/pygnome:$UPSTREAM_BRANCH
   script:
     - conda install mamba
-    - apt-get install -y redis
+    - yum install redis -y
     - redis-server --daemonize yes
     - git clone --depth 1 -b develop
       https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/libgoods.git
