CI: We might be on Docker 17.06 or later, so the entrypoint definition would need to change.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,7 +110,7 @@ test_img:
     - linux
   image:
     name: registry.orr.noaa.gov/gnome/webgnomeapi:$CI_COMMIT_BRANCH.temp
-    entrypoint: ["/bin/bash", "-c"]
+    entrypoint: [""]
   script:
     - cd /webgnomeapi
     - mamba install -y --file conda_requirements_test.txt
