added py_gnome requirements to the list when installing deps.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,9 +54,12 @@ test_src:
     - redis-server --daemonize yes
     - git clone --depth 1 -b develop
       https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/libgoods.git
-    - mamba install -y python=$PYTHON_VER --file conda_requirements.txt --file
-      conda_requirements_test.txt --file libgoods/conda_requirements.txt
+    - git clone --depth 1 -b develop
+      https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/pygnome.git
 
+    - mamba install -y python=$PYTHON_VER --file conda_requirements.txt
+      --file conda_requirements_test.txt --file libgoods/conda_requirements.txt
+      --file pygnome/py_gnome/conda_requirements.txt
     - pushd libgoods && pip install . && popd
     - pip install .
 
