--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,18 +49,11 @@ test_src:
     - linux
   image: registry.orr.noaa.gov/gnome/pygnome:$UPSTREAM_BRANCH
   script:
-    - conda install mamba
     - apt-get install -y redis
     - redis-server --daemonize yes
     - git clone --depth 1 -b develop
       https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/libgoods.git
-    #- git clone --depth 1 -b develop
-    #  https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/pygnome.git
-    - pwd
-    - ls -la
-    - ls -la ../
-    - ls -la /
-    - mamba install -y python=$PYTHON_VER --file conda_requirements.txt
+    - conda install -y python=$PYTHON_VER --file conda_requirements.txt
       --file conda_requirements_test.txt --file libgoods/conda_requirements.txt
       --file /pygnome/py_gnome/conda_requirements.txt
     - pushd libgoods && pip install . && popd
