--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ variables:
 #       up, including the tag we want to keep.
 
 stages:
+  - util
   - test_src
   - build_temp_img
   - test_img
@@ -48,18 +49,18 @@ test_src:
     - linux
   image: registry.orr.noaa.gov/gnome/pygnome:$UPSTREAM_BRANCH
   script:
-    - conda install mamba
     - apt-get install -y redis
     - redis-server --daemonize yes
     - git clone --depth 1 -b develop
       https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/libgoods.git
-    - mamba install -y python=$PYTHON_VER --file conda_requirements.txt --file
-      conda_requirements_test.txt --file libgoods/conda_requirements.txt
-
+    - conda install -y python=$PYTHON_VER --file conda_requirements.txt
+      --file conda_requirements_test.txt --file libgoods/conda_requirements.txt
+      --file /pygnome/py_gnome/conda_requirements.txt
     - pushd libgoods && pip install . && popd
     - pip install .
 
-    - python setup.py compilejson
+    - python setup.py compilejson # is this duplicating what happens already in the setup.py?
+    - conda env export > webgnome_api/views/deployed_environment.yaml
     - pytest webgnome_api/tests
     - conda list > conda_packages.txt
   artifacts:
@@ -113,7 +114,7 @@ test_img:
     entrypoint: [""]
   script:
     - cd /webgnomeapi
-    - mamba install -y --file conda_requirements_test.txt
+    - conda install -y --file conda_requirements_test.txt
     - redis-server --daemonize yes
     - pytest webgnome_api/tests
 
@@ -188,7 +189,7 @@ deploy_redis_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-dev
     - deploy
@@ -213,7 +214,7 @@ stop_redis_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-dev
@@ -233,7 +234,7 @@ deploy_proxy_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-dev
     - deploy
@@ -281,7 +282,7 @@ stop_proxy_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-dev
@@ -302,7 +303,7 @@ deploy_api_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-dev
     - deploy
@@ -335,7 +336,7 @@ stop_api_dev:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "develop" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-dev
@@ -365,7 +366,7 @@ deploy_redis_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-stage
     - deploy
@@ -397,7 +398,7 @@ stop_redis_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-stage
@@ -416,7 +417,7 @@ deploy_proxy_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-stage
     - deploy
@@ -461,7 +462,7 @@ stop_proxy_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-stage
@@ -480,7 +481,7 @@ deploy_api_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   tags:
     - gnome-stage
     - deploy
@@ -516,7 +517,7 @@ stop_api_stage:
   rules:
     - if:
         $CI_COMMIT_BRANCH == "main" && $CI_PIPELINE_SOURCE =~
-        /\b(push|merge_request_event|pipeline|schedule)\b/
+        /\b(push|merge_request_event|pipeline|schedule|web)\b/
   when: manual
   tags:
     - gnome-stage
@@ -756,7 +757,7 @@ prune_session_folders_dev:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_session_folders.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 prune_tmp_files_dev:
   stage: maintenance
@@ -773,7 +774,7 @@ prune_tmp_files_dev:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_tmp_files.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 prune_session_folders_stage:
   stage: maintenance
@@ -790,7 +791,7 @@ prune_session_folders_stage:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_session_folders.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 prune_tmp_files_stage:
   stage: maintenance
@@ -807,7 +808,7 @@ prune_tmp_files_stage:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_tmp_files.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 prune_session_folders_production:
   stage: maintenance
@@ -824,7 +825,7 @@ prune_session_folders_production:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_session_folders.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 prune_tmp_files_production:
   stage: maintenance
@@ -841,10 +842,10 @@ prune_tmp_files_production:
     CONTAINER_NAME: webgnome_api
     SCRIPT_NAME: ./prune_old_tmp_files.sh
   script:
-    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+    - docker exec $(docker ps -q -f name=$CONTAINER_NAME|head -n 1) /bin/bash $SCRIPT_NAME
 
 .docker tidy:
-  stage: maintenance
+  stage: util
   when: manual
   script:
     - docker system prune -f -a --volumes
@@ -854,9 +855,6 @@ docker prod tidy:
   only: 
     refs:
       - production
-  environment:
-    name: production-deployment
-    url: https://gnome.orr.noaa.gov
   tags:
     - deploy
     - gnome-prod
@@ -866,9 +864,6 @@ docker dev tidy:
   only: 
     refs:
       - develop
-  environment:
-    name: dev-deployment
-    url: https://gnome-dev.orr.noaa.gov
   tags:
     - deploy
     - gnome-dev
@@ -878,9 +873,6 @@ docker stage tidy:
   only: 
     refs:
       - main
-  environment:
-    name: stage-deployment
-    url: https://gnome-stage.orr.noaa.gov
   tags:
     - deploy
     - gnome-stage
