--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -676,7 +676,7 @@ deploy_api_production:
     - docker pull $IMAGE_TAG
     - docker service rm $CONTAINER_NAME || true
     - docker service create --name $CONTAINER_NAME --network $APP_NETWORK
-      --mount source $MODELS_VOLUME,destination=/webgnomeapi/models
+      --mount source=$MODELS_VOLUME,destination=/webgnomeapi/models
       --endpoint-mode dsnrr --replicas=$API_SCALE $IMAGE_TAG
     - docker service ps $CONTAINER_NAME
     - docker service logs $CONTAINER_NAME
